0029021: Coding Rules - eliminate GCC warnings in Qt sample